--- a/po/stellarium/ky.po
+++ b/po/stellarium/ky.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-08-05 19:34+0700\n"
-"PO-Revision-Date: 2012-08-07 09:33+0000\n"
+"PO-Revision-Date: 2012-08-10 03:35+0000\n"
 "Last-Translator: blacktext <translatorky@lavabit.com>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-08 04:35+0000\n"
-"X-Generator: Launchpad (build 15757)\n"
+"X-Launchpad-Export-Date: 2012-08-10 04:37+0000\n"
+"X-Generator: Launchpad (build 15761)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -77,7 +77,7 @@ msgstr "Чоңдук: <b>%1</b>"
 #: src/core/modules/Nebula.cpp:109
 #, qt-format
 msgid "Size: %1"
-msgstr "Чен: %1"
+msgstr "Өлчөм: %1"
 
 #: src/core/modules/Nebula.cpp:307
 msgid "Galaxy"
@@ -447,7 +447,7 @@ msgid ""
 "Star count: %2 Million\n"
 "Magnitude range: %3 - %4"
 msgstr ""
-"Жүктөө чени: %1МБ\n"
+"Жүктөө өлчөмү: %1МБ\n"
 "Жылдыз саны: %2 миллион\n"
 "Чоңдук диапазону: %3 - %4"
 
@@ -1081,7 +1081,7 @@ msgstr "Тандалган ландшафтты (толугу менен) алу
 #: src/gui/AddRemoveLandscapesDialog.cpp:188
 #, qt-format
 msgid "Size on disk: %1 MiB"
-msgstr "Дисктеги чен: %1 MiB"
+msgstr "Дисктеги өлчөм: %1 MiB"
 
 #. TRANSLATORS: The parameter is a file/directory path that may be quite long.
 #: src/gui/AddRemoveLandscapesDialog.cpp:214
@@ -3335,7 +3335,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:977
 msgid "Size"
-msgstr ""
+msgstr "Өлчөм"
 
 #: src/ui_configurationDialog.h:979
 msgid "Geocentric equatorial coordinates, equinox of date"
@@ -3722,7 +3722,7 @@ msgstr "Бурч ченөөч"
 #. TRANSLATORS: instructions for using the AngleMeasure plugin.
 #: plugins/AngleMeasure/src/AngleMeasure.cpp:308
 msgid "The Angle Measure is enabled:"
-msgstr "Бурч ченөөч колдонулуп турат:"
+msgstr "Бурч ченөөч күйгүзүлгөн:"
 
 #. TRANSLATORS: instructions for using the AngleMeasure plugin.
 #: plugins/AngleMeasure/src/AngleMeasure.cpp:310
@@ -5132,7 +5132,7 @@ msgstr "Көрүнүп турган мейкин индикаторлорун к
 
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:512
 msgid "Circle size(s):"
-msgstr "Тегерек чен(дер)и:"
+msgstr "Тегеректин өлчөмү:"
 
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:514
 msgid "Up to ten decimal values in degrees of arc, separated with commas"
