Launchpad automatic translations update.

--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-10 20:41+0700\n"
-"PO-Revision-Date: 2012-08-10 18:48+0000\n"
+"PO-Revision-Date: 2012-08-11 17:00+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-11 05:16+0000\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:44+0000\n"
 "X-Generator: Launchpad (build 15780)\n"
 "X-Poedit-Country: BELARUS\n"
 "Language: be\n"
@@ -4085,6 +4085,12 @@ msgid ""
 "image scaled, a good deal of the screen can be wasted.  Therefore I "
 "recommend that you leave it off, unless you feel you have a need of it."
 msgstr ""
+"Можна маштабаваць выяву, бачную на экране. Гэта зроблена з мэтай лепшага "
+"параўнаньня аднаго спалучэньня акуляра й тэлескопа зь іншым. Адзін і той жа "
+"акуляр у двух розных тэлескопах з рознай фокуснай адлегласьцю дасьць два "
+"розных полі зроку. Адмоўны эфэкт гэтага ў тым, што пры маштабаваньні выявы "
+"значная частка экрану будзе змарнаваная. Таму я ня раю задзейнічаць яго, "
+"апрача сытуацый, калі яно сапраўды табе патрэбна."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:431
 msgid ""
@@ -6442,7 +6448,7 @@ msgstr "Вуглавая адлегласьць"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:230
 msgid "Discovered year"
-msgstr ""
+msgstr "Год адкрыцьця"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
