--- a/po/stellarium/mi.po
+++ b/po/stellarium/mi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-08-10 20:41+0700\n"
-"PO-Revision-Date: 2012-01-30 06:04+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-08-11 17:27+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Maori <mi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-11 05:20+0000\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:44+0000\n"
 "X-Generator: Launchpad (build 15780)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -27,7 +27,7 @@ msgstr ""
 
 #: src/core/modules/GridLinesMgr.cpp:550 src/ui_viewDialog.h:1164
 msgid "Equator"
-msgstr ""
+msgstr "weherua"
 
 #: src/core/modules/GridLinesMgr.cpp:554 src/ui_viewDialog.h:1172
 msgid "Horizon"
@@ -703,7 +703,7 @@ msgstr ""
 #: src/gui/StelGui.cpp:177
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:330
 msgid "Equator line"
-msgstr ""
+msgstr "weherua"
 
 #: src/gui/StelGui.cpp:178
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:310
@@ -726,7 +726,7 @@ msgstr ""
 
 #: src/gui/StelGui.cpp:183 src/ui_viewDialog.h:1130
 msgid "Atmosphere"
-msgstr ""
+msgstr "pihao"
 
 #: src/gui/StelGui.cpp:184
 msgid "Fog"
@@ -1112,11 +1112,11 @@ msgstr ""
 #: src/translations.h:33 plugins/Exoplanets/src/Exoplanet.cpp:208
 #: plugins/Exoplanets/src/Exoplanet.cpp:212
 msgid "Sun"
-msgstr ""
+msgstr "Tama-nui-te-Rā"
 
 #: src/translations.h:34
 msgid "Mercury"
-msgstr ""
+msgstr "Apārangi"
 
 #: src/translations.h:35
 msgid "Venus"
@@ -1124,7 +1124,7 @@ msgstr ""
 
 #: src/translations.h:36
 msgid "Earth"
-msgstr ""
+msgstr "Papa-tū-ā-nuku"
 
 #. TRANSLATORS: Name of landscape and Earth's satellite
 #: src/translations.h:37 src/translations.h:166
@@ -1134,7 +1134,7 @@ msgstr ""
 #. TRANSLATORS: Name of landscape and planet
 #: src/translations.h:38 src/translations.h:174
 msgid "Mars"
-msgstr ""
+msgstr "Tū-mata-uenga"
 
 #: src/translations.h:39
 msgid "Deimos"
@@ -1162,7 +1162,7 @@ msgstr ""
 
 #: src/translations.h:45
 msgid "Jupiter"
-msgstr ""
+msgstr "Pareārau"
 
 #: src/translations.h:46
 msgid "Io"
@@ -1232,7 +1232,7 @@ msgstr ""
 #. TRANSLATORS: Name of landscape and planet
 #: src/translations.h:62 src/translations.h:176
 msgid "Saturn"
-msgstr ""
+msgstr "Rongo"
 
 #: src/translations.h:63
 msgid "Mimas"
@@ -1272,11 +1272,11 @@ msgstr ""
 
 #: src/translations.h:72
 msgid "Neptune"
-msgstr ""
+msgstr "Tangaroa"
 
 #: src/translations.h:73
 msgid "Uranus"
-msgstr ""
+msgstr "Whērangi"
 
 #: src/translations.h:74
 msgid "Miranda"
@@ -1300,11 +1300,11 @@ msgstr ""
 
 #: src/translations.h:79
 msgid "Pluto"
-msgstr ""
+msgstr "Whiro"
 
 #: src/translations.h:80
 msgid "Charon"
-msgstr ""
+msgstr "Kūwatawata"
 
 #. TRANSLATORS: Moon of Pluto (II)
 #: src/translations.h:82
@@ -2293,7 +2293,7 @@ msgstr ""
 
 #: src/translations.h:375
 msgid "Marshall Islands"
-msgstr ""
+msgstr "Ngā Moutere Māhara"
 
 #: src/translations.h:376
 msgid "Macedonia"
