--- a/po/stellarium-skycultures/de.po
+++ b/po/stellarium-skycultures/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-07-29 12:37+0000\n"
-"Last-Translator: Philipp Fischbeck <philipp.fischbeck@arcor.de>\n"
+"PO-Revision-Date: 2012-08-11 23:50+0000\n"
+"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-30 04:49+0000\n"
-"X-Generator: Launchpad (build 15702)\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:45+0000\n"
+"X-Generator: Launchpad (build 15780)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -25,7 +25,7 @@ msgstr "47 Tucanae/NGC 104"
 
 #: nebulae/default/ngc2000names.dat:113 nebulae/default/ngc2000names.dat:114
 msgid "Antennae"
-msgstr "Antenne"
+msgstr "Antennen"
 
 #: nebulae/default/ngc2000names.dat:115
 msgid "Barnard's galaxy"
@@ -2357,7 +2357,7 @@ msgstr "Freistehender Palast"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Official for Materials Supply"
-msgstr ""
+msgstr "Nachschubbeauftragter"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
@@ -2558,7 +2558,7 @@ msgstr "General der Grenze"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "Feier des Himmels"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
