--- a/po/stellarium-skycultures/mi.po
+++ b/po/stellarium-skycultures/mi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-06-11 04:14+0000\n"
-"Last-Translator: Eli Tap <eli@cloud.co.nz>\n"
+"PO-Revision-Date: 2012-08-11 17:26+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Maori <mi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-18 05:28+0000\n"
-"X-Generator: Launchpad (build 15637)\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:45+0000\n"
+"X-Generator: Launchpad (build 15780)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -211,7 +211,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:173
 msgid "Pleiades"
-msgstr ""
+msgstr "Matariki"
 
 #: nebulae/default/ngc2000names.dat:174
 msgid "Merope nebula"
@@ -3953,7 +3953,7 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:60
 msgid "Orion"
-msgstr ""
+msgstr "Tautoru"
 
 #: skycultures/western/constellation_names.eng.fab:61
 msgid "Pavo"
@@ -4249,7 +4249,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:46
 msgid "Rigel"
-msgstr ""
+msgstr "Puanga"
 
 #: skycultures/western/star_names.fab:47
 msgid "Capella"
@@ -4337,7 +4337,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:69
 msgid "Sirius"
-msgstr ""
+msgstr "Takurua"
 
 #: skycultures/western/star_names.fab:70
 msgid "Adhara"
