--- a/po/stellarium-skycultures/ms.po
+++ b/po/stellarium-skycultures/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-08-10 05:29+0000\n"
+"PO-Revision-Date: 2012-08-11 22:54+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-11 05:25+0000\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:45+0000\n"
 "X-Generator: Launchpad (build 15780)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -1344,7 +1344,7 @@ msgstr "Askar berkuda yang kedua"
 
 #: skycultures/arabic/star_names.fab:199
 msgid "The shining"
-msgstr ""
+msgstr "Yang terserlah"
 
 #: skycultures/arabic/star_names.fab:200
 msgid "Second lucky star of the rain"
@@ -1396,7 +1396,7 @@ msgstr "Jampi yang keempat"
 
 #: skycultures/arabic/star_names.fab:212
 msgid "The second companionable"
-msgstr ""
+msgstr "Sahabat kedua"
 
 #: skycultures/arabic/star_names.fab:213
 msgid "Second one of the brand-mark"
@@ -2307,7 +2307,7 @@ msgstr "Istana dengan Kubu"
 
 #: skycultures/korean/constellation_names.eng.fab:75
 msgid "Hook for Dress"
-msgstr ""
+msgstr "Cangkuk Pakaian"
 
 #: skycultures/korean/constellation_names.eng.fab:76
 msgid "Groom"
@@ -2315,7 +2315,7 @@ msgstr "Penjaga Kuda"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Charioteer"
-msgstr ""
+msgstr "Pemandu Kereta Kuda"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
@@ -2355,11 +2355,11 @@ msgstr "Istana Terasing"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Official for Materials Supply"
-msgstr ""
+msgstr "Pegawai Bekalan Bahan"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
-msgstr ""
+msgstr "Meringan"
 
 #: skycultures/korean/constellation_names.eng.fab:90
 msgid "Rampart"
@@ -2506,7 +2506,7 @@ msgstr "Bukit Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:127
 msgid "Conspiracy of Sky"
-msgstr ""
+msgstr "Konspirasi Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:128
 msgid "Fodder"
@@ -2540,7 +2540,7 @@ msgstr "Pintu Laluan Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:138
 msgid "Flage of Saam"
-msgstr ""
+msgstr "Bendera Saam"
 
 #: skycultures/korean/constellation_names.eng.fab:139
 msgid "Village of Sky"
@@ -2548,7 +2548,7 @@ msgstr "Kampung Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:140
 msgid "Belvedere of Sky"
-msgstr ""
+msgstr "Belvedere Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:141
 msgid "General of Border"
@@ -2556,7 +2556,7 @@ msgstr "Jeneral Sempadan"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "Perayaan Langit"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
