--- a/po/stellarium/el.po
+++ b/po/stellarium/el.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-10 20:41+0700\n"
-"PO-Revision-Date: 2012-05-08 16:34+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-08-11 16:28+0000\n"
+"Last-Translator: Konstantinos Ls <Unknown>\n"
 "Language-Team: Greek, Modern (1453-) <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-11 05:18+0000\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:44+0000\n"
 "X-Generator: Launchpad (build 15780)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -35,7 +35,7 @@ msgstr "Ορίζοντας"
 
 #: src/core/modules/GridLinesMgr.cpp:558
 msgid "Galactic Plane"
-msgstr ""
+msgstr "Γαλαξιακό Επίπεδο"
 
 #: src/core/modules/LandscapeMgr.cpp:495
 msgid "Author: "
@@ -734,7 +734,7 @@ msgstr "Γαλαξιακό πλέγμα"
 
 #: src/gui/StelGui.cpp:175 src/ui_viewDialog.h:1180
 msgid "Galactic plane"
-msgstr ""
+msgstr "Γαλαξιακό επίπεδο"
 
 #: src/gui/StelGui.cpp:176
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:335
@@ -788,12 +788,12 @@ msgstr "Αστέρες"
 
 #: src/gui/StelGui.cpp:189
 msgid "Stars labels"
-msgstr ""
+msgstr "Ετικέτες αστεριών"
 
 #: src/gui/StelGui.cpp:190
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:297
 msgid "Planet labels"
-msgstr ""
+msgstr "Ετικέτες Πλανητών"
 
 #: src/gui/StelGui.cpp:191
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:301
@@ -1129,11 +1129,11 @@ msgstr "εκκαθάριση εικόνων"
 
 #: src/gui/ScriptConsole.cpp:77
 msgid "natural"
-msgstr ""
+msgstr "φυσικό"
 
 #: src/gui/ScriptConsole.cpp:78
 msgid "starchart"
-msgstr ""
+msgstr "χάρτης αστεριών"
 
 #: src/gui/SearchDialog.cpp:351
 msgid "Simbad Lookup Error"
