--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-10 20:41+0700\n"
-"PO-Revision-Date: 2012-08-10 05:22+0000\n"
+"PO-Revision-Date: 2012-08-11 22:49+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-11 05:21+0000\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:45+0000\n"
 "X-Generator: Launchpad (build 15780)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -810,7 +810,7 @@ msgstr "Jejak planet"
 
 #: src/gui/StelGui.cpp:194
 msgid "Night vision mode"
-msgstr ""
+msgstr "Mod nampak malam"
 
 #: src/gui/StelGui.cpp:195
 msgid "Full-screen mode"
