--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-10 20:41+0700\n"
-"PO-Revision-Date: 2012-08-05 09:01+0000\n"
-"Last-Translator: forest93 <Unknown>\n"
+"PO-Revision-Date: 2012-08-11 14:45+0000\n"
+"Last-Translator: Allen Zhong <Unknown>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-11 05:25+0000\n"
+"X-Launchpad-Export-Date: 2012-08-12 04:45+0000\n"
 "X-Generator: Launchpad (build 15780)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -758,7 +758,7 @@ msgstr "天体"
 
 #: src/gui/StelGui.cpp:189
 msgid "Stars labels"
-msgstr ""
+msgstr "恒星标签"
 
 #: src/gui/StelGui.cpp:190
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:297
@@ -777,7 +777,7 @@ msgstr "行星轨迹"
 
 #: src/gui/StelGui.cpp:194
 msgid "Night vision mode"
-msgstr ""
+msgstr "夜间模式"
 
 #: src/gui/StelGui.cpp:195
 msgid "Full-screen mode"
@@ -1607,12 +1607,12 @@ msgstr "水星上的三次日出与日落"
 #. TRANSLATORS: Name of script
 #: src/translations.h:196
 msgid "Double eclipse from Deimos in 2017"
-msgstr ""
+msgstr "2017年从火卫二观测到的双重食"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:198
 msgid "Double eclipse from Deimos in 2031"
-msgstr ""
+msgstr "2031年从火卫二观测到的双重食"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:200
@@ -1632,17 +1632,17 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:206
 msgid "Solar System Screensaver"
-msgstr ""
+msgstr "太阳系屏保"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:208
 msgid "Constellations Tour"
-msgstr ""
+msgstr "星座通览"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:210
 msgid "Sun from different planets"
-msgstr ""
+msgstr "从不同行星所见的太阳"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:212
@@ -1652,7 +1652,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:214
 msgid "Transit of Venus"
-msgstr ""
+msgstr "金星凌日"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
@@ -1732,15 +1732,15 @@ msgstr ""
 #: src/translations.h:231
 msgid ""
 "Screensaver of various happenings in the Solar System. 171 events in all!"
-msgstr ""
+msgstr "太阳系中众多天象组成的屏幕保护程序。一共有171个不同天象！"
 
 #: src/translations.h:232
 msgid "A tour via western constellations."
-msgstr ""
+msgstr "对西方星座进行简单浏览。"
 
 #: src/translations.h:233
 msgid "Look at Sun from big planets of Solar system and Pluto."
-msgstr ""
+msgstr "从太阳系各大行星以及冥王星所看到的太阳。"
 
 #: src/translations.h:234
 msgid "Earth best views from other Solar system bodies in the 21st Century."
@@ -1748,7 +1748,7 @@ msgstr ""
 
 #: src/translations.h:235
 msgid "Transit of Venus as seen from Sydney Australia 6th June 2012."
-msgstr ""
+msgstr "从澳大利亚悉尼观测的发生在2012年6月6日的金星凌日。"
 
 #: src/translations.h:236
 msgid ""
@@ -2766,7 +2766,7 @@ msgstr "设成预设值"
 
 #: src/ui_locationDialogGui.h:395
 msgid "Return to default"
-msgstr ""
+msgstr "返回默认"
 
 #: src/ui_locationDialogGui.h:396 plugins/Oculars/src/ui_ocularDialog.h:880
 #: plugins/Oculars/src/ui_ocularDialog.h:889
@@ -4166,7 +4166,7 @@ msgstr "竖直翻转"
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:242
 msgctxt "tab in plugin windows"
 msgid "About"
-msgstr ""
+msgstr "关于"
 
 #: plugins/Satellites/src/Satellites.cpp:65
 #: plugins/Satellites/src/ui_satellitesDialog.h:713
@@ -5815,7 +5815,7 @@ msgstr "历史超新星插件"
 msgid ""
 "A plugin that shows some historical supernovae brighter than visual "
 "magnitude 10: "
-msgstr ""
+msgstr "一个展示历史上亮度超过视星等10等的超新星的插件： "
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:115
 msgid "Light curves"
@@ -6236,7 +6236,7 @@ msgstr "角距离"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:230
 msgid "Discovered year"
-msgstr ""
+msgstr "发现年份"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
