fixed issues in translations

--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-12 22:25+0700\n"
+"POT-Creation-Date: 2012-08-12 22:46+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -6302,32 +6302,19 @@ msgstr ""
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
-#, qt-format
-msgid "%1h "
+msgid "h"
 msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
-#, c-format, qt-format
-msgid "%1m "
+msgid "m"
 msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
-#, c-format, qt-format
-msgid "%1s"
-msgstr ""
-
-#: plugins/Observability/src/Observability.cpp:436
-#: plugins/Observability/src/Observability.cpp:439
-#: plugins/Observability/src/Observability.cpp:447
-#: plugins/Observability/src/Observability.cpp:450
-#: plugins/Observability/src/Observability.cpp:479
-#: plugins/Observability/src/Observability.cpp:483
-#, qt-format
-msgid "%1:%2"
+msgid "s"
 msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:441
