--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-12 11:39+0000\n"
+"PO-Revision-Date: 2012-08-13 14:27+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:20+0000\n"
+"X-Launchpad-Export-Date: 2012-08-14 04:43+0000\n"
 "X-Generator: Launchpad (build 15791)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -6477,7 +6477,7 @@ msgstr "Oppdater eksoplanetdata fra internett"
 
 #: plugins/Observability/src/Observability.cpp:68
 msgid "Observability analysis"
-msgstr ""
+msgstr "Observerbarhetsanalyse"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
@@ -6496,11 +6496,11 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
-msgstr ""
+msgstr "Observerbarhet"
 
 #: plugins/Observability/src/Observability.cpp:228
 msgid "Observability configuration window"
-msgstr ""
+msgstr "Innstillingsvindu for observerbarhet"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
@@ -6542,11 +6542,11 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
-msgstr ""
+msgstr "Sirkumpolar."
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "No rise."
-msgstr ""
+msgstr "Ingen oppgang."
 
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
@@ -6560,7 +6560,7 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr ""
+msgstr "Kilde er ikke observerbar."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
@@ -6585,36 +6585,36 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
-msgstr ""
+msgstr "Kosmisk oppgang/nedgang"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "No Cosmical rise/set."
-msgstr ""
+msgstr "Ingen kosmisk oppgang/nedgang."
 
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
 msgid "from %1 to %2"
-msgstr ""
+msgstr "fra %1 til %2"
 
 #: plugins/Observability/src/Observability.cpp:604
 msgid " to 31 Dec"
-msgstr ""
+msgstr " til 31. des."
 
 #: plugins/Observability/src/Observability.cpp:611
 msgid "Observable during the whole year."
-msgstr ""
+msgstr "Observerbar gjennom hele året."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Ikke observerbar på mørke natten."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
-msgstr ""
+msgstr "Best observert"
 
 #: plugins/Observability/src/Observability.cpp:637
 msgid " TODAY:"
-msgstr ""
+msgstr " I DAG:"
 
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
@@ -6628,7 +6628,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
-msgstr ""
+msgstr "Programtillegg for observerbarhet"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:100
 msgid ""
@@ -6644,11 +6644,11 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
-msgstr ""
+msgstr "Forklaring av noen parametere"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid "Sun altitude at twilight:"
-msgstr ""
+msgstr "Solhøyde ved tussmørke:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid ""
@@ -6660,7 +6660,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr ""
+msgstr "Dagens efemerider:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6705,7 +6705,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
-msgstr ""
+msgstr "Best observert fra ... til ...:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid ""
@@ -6729,7 +6729,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
-msgstr ""
+msgstr "Fullmåne:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid ""
@@ -6740,23 +6740,23 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
 msgid "deg."
-msgstr ""
+msgstr "grd."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Observerbarhetsinnstilling"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Innstilling av programtillegg for observerbarhet"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Viser alternativer"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Dagens efemerider (oppgang, nedgang og transittider)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
@@ -6772,35 +6772,35 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Datoer for forrige og neste fullmåne"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Font color and size"
-msgstr ""
+msgstr "Skriftfarge og størrelse"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:345
 msgid "Red"
-msgstr ""
+msgstr "Rød"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:346
 msgid "Green"
-msgstr ""
+msgstr "Grønn"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:347
 msgid "Blue"
-msgstr ""
+msgstr "Blå"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:348
 msgid "Font Size"
-msgstr ""
+msgstr "Skriftstørrelse"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Sun altitude at twilight"
-msgstr ""
+msgstr "Solhøyde ved tussmørke"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "0 deg."
-msgstr ""
+msgstr "0 grd."
 
 #~ msgid "Equator Line"
 #~ msgstr "Ekvatorlinje"
