--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-12 16:31+0000\n"
+"PO-Revision-Date: 2012-08-13 17:26+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:21+0000\n"
+"X-Launchpad-Export-Date: 2012-08-14 04:43+0000\n"
 "X-Generator: Launchpad (build 15791)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -6542,6 +6542,13 @@ msgid ""
 "the quantities shown by this script is given in the 'About' tab of the "
 "configuration window"
 msgstr ""
+"Сообщает результат анализа наблюдаемости (время восхода, заката и "
+"кульминации), а также время года, когда небесное тело лучше всего "
+"наблюдается. Это предполагает, что небесное тело наблюдаемо, если оно "
+"находится над горизонтом в течении части ночи. Плагин также дает дату "
+"наибольшего удаления от Солнца и дни акронического и космического восходов и "
+"закатов. <br><br> Объяснение показываемых величин изложено во вкладке 'О "
+"плагине' окна конфигурации."
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
@@ -6613,11 +6620,11 @@ msgstr "Источник не наблюдаем."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr ""
+msgstr "Нет ни акронического, ни космического восхода и заката."
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Наибольшее удаление от Солнца: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
@@ -6626,19 +6633,19 @@ msgstr " (на высоте %1 град.)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
-msgstr ""
+msgstr "Акронический восход/закат"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "No Acronychal rise/set."
-msgstr ""
+msgstr "Нет акронического восхода и заката."
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
-msgstr ""
+msgstr "Космический восход/закат"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "No Cosmical rise/set."
-msgstr ""
+msgstr "Нет космического восхода и заката."
 
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
@@ -6655,7 +6662,7 @@ msgstr "Наблюдается в течение всего года."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Не наблюдаемо в тёмное время ночи."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
@@ -6690,6 +6697,15 @@ msgid ""
 "taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
 "for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
+"Плагин, который анализирует наблюдаемость выбранного небесного светила (или "
+"центра экрана, если светило не выбрано). Плагин может показать время "
+"восхода, заката и кульминации, а также лучшего для наблюдения времени года "
+"(например, наибольшего удаления от Солнца), диапазон дат, когда светило "
+"находится над горизонтов в тёмное время ночи и дат акронического и "
+"космического восходов и закатов.<br><br>Эфемериды тел Солнечной системы и "
+"эффекты параллакса приняты во внимание при расчётах. <br> <br> Автор "
+"благодарит Александра Вольфа и Георга Зотти за их советы. <br> <br> Иван "
+"Марти-Видаль (Космическая обсерватория Онсала)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
@@ -6718,10 +6734,13 @@ msgid ""
 "as time spans (referred to the current time) and as clock hours (in local "
 "time)."
 msgstr ""
+"Очевидный. Программа покажет время восхода, заката и кульминации (транзита). "
+"Точное время эфемериды дано двумя способами: как отрезка времени "
+"(используется текущее время) и как часы часов (по местному времени)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr ""
+msgstr "Акронический и космический восход/закат:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6738,7 +6757,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Наибольшее удаление от Солнца:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6785,6 +6804,8 @@ msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 msgstr ""
+"Когда выбрана Луна, то программа может вычислить точные ближайшие даты (с "
+"точностью до минуты) полнолуний."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
@@ -6793,27 +6814,27 @@ msgstr "град."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Конфигурация \"Наблюдаемости\""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Конфигурация плагина \"Наблюдаемость\""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Настройки показа"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Сегодняшние эфемериды (время восхода, заката и транзита)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr ""
+msgstr "Даты акронического и космического восхода и заката"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
-msgstr ""
+msgstr "Дата наибольшего удаления от Солнца"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
