Launchpad automatic translations update.

--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-14 14:40+0000\n"
+"PO-Revision-Date: 2012-08-16 06:21+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-15 04:38+0000\n"
-"X-Generator: Launchpad (build 15801)\n"
+"X-Launchpad-Export-Date: 2012-08-17 04:37+0000\n"
+"X-Generator: Launchpad (build 15810)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -6755,6 +6755,15 @@ msgid ""
 "that the source is hardly observable (or not observable at all) in the dates "
 "between Cosmical set and rise."
 msgstr ""
+"Terbit Akronik (atau terbenam) bagi sesebuah objek berlaku bila objek terbit "
+"(atau terbenam) bila Matahari terbenam (atau terbit), secara berasingan. "
+"Tarikh sebenar efemeris ini bergantung pada lokasi Pemerhati. Tarikh "
+"diantara terbenam adan terbit Akronik bil altitud objek cakerawala berada "
+"tinggi bila Matahari berada dibawah ufuk (maka objek tersebut dapat dicerap "
+"dengan baik). Sebaliknya, terbit Kosmos (atau terbenam) berlaku bila kedua-"
+"dua, objek dan Matahari, terbit (ataupun terbenam) secara serentak. Ia "
+"jelaslah sumber itu sukar dicerap (atau tidak boleh dicerap langsung) pada "
+"tarikh diantara terbenam dan terbit Kosmos."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
@@ -6771,6 +6780,13 @@ msgid ""
 "at that declination. Hence, that is the 'best' night to observe a particular "
 "object."
 msgstr ""
+"Berlaku bila pemisahan bersudut diantara Matahari dan objek cakerawala "
+"adalah maksimum. Dalam kebanyakan kes, ia menyamai sepertimana longitud "
+"Khatulistiwa Matahari dan perbezaan objek sebanyak 180 darjah, jadi Matahari "
+"berhadapan dengan objek tersebut. Bila objek pada pemisahan bersudut mungkin "
+"yang maksimum dari Matahari (tidak kira sama ada planet atau bintang), ia "
+"mencapai puncaknya ditengah malam, dan pada kawasan tergelap Langit pada "
+"keserongan. Maka, ia adalah malam 'terbaik' untuk mencerap objek tertentu."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
@@ -6795,6 +6811,23 @@ msgid ""
 "planets (which will not depend on the mere input of a twilight Sun elevation "
 "by the user) will be implemented in future versions of this plugin."
 msgstr ""
+"Program mengira julat tarikh bila objek cakerawala berada diatas ufuk "
+"sekurang-kurangnya satu ketika diwaktu malam. Pada waktu 'malam', program "
+"menganggap masa  meretang bila altitud Matahari berada dibawah senja (yang "
+"mana boleh ditetapkan oleh pengguna; rujuk diatas). Bila objek berada tetap "
+"dilangit (atau merupakan planet luar), julat kebolehcerapan epok bagi tahun "
+"semasa boleh mempunyai dua bentuk kemungkinan; iaitu jula dari satu tarikh "
+"ke tarikh yang lain (iaitu, 20 Jan hingga 15 Sep) atau dalam dua langkah "
+"(dari 1 Jan hingga tarikh yang diberikan dan juga pada tarikh lain hingga 31 "
+"Dis). Dalam kes pertama, tarikh pertama (20 Jan sebagai contoh) akan "
+"menghampiri 'bintang Syuruk' dan tarikh kedua (15 Sep untuk contoh ini) akan "
+"menghampiri 'terbenam Syuruk'. Dalam kes kedua (iaitu julat dalam bentuk 1 "
+"Jan hingga 20 Meo dan 21 Spe hingga 31 Dis), tarikh pertama (20 Mei untuk "
+"contoh ini) akan menghampiri kepada terbenam Syuruk dan yang kedua (21 Sep "
+"untuk contoh ini) dengan terbit Syuruk. Persamaan yang lebih tepat untuk "
+"menganggar terbit/terbenam Syuruk bintang dan planet (yang mana tidak akan "
+"bergantung pada input penaikan Matahari senja oleh pengguna) akan dilaksana "
+"pada versi akan datang pemalam ini."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
