--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-03 05:26+0000\n"
-"Last-Translator: cjl <Unknown>\n"
+"PO-Revision-Date: 2012-08-16 17:58+0000\n"
+"Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:23+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-17 04:37+0000\n"
+"X-Generator: Launchpad (build 15810)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -175,12 +175,12 @@ msgstr "Illuminated: %1%"
 #: src/core/modules/MinorPlanet.cpp:192
 #, qt-format
 msgid "Provisional designation: %1"
-msgstr ""
+msgstr "Provisional designation: %1"
 
 #: src/core/modules/MinorPlanet.cpp:247
 #, qt-format
 msgid "Orbital period: %1 days"
-msgstr ""
+msgstr "Orbital period: %1 days"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
@@ -807,7 +807,7 @@ msgstr "Stars"
 
 #: src/gui/StelGui.cpp:189
 msgid "Stars labels"
-msgstr ""
+msgstr "Stars labels"
 
 #: src/gui/StelGui.cpp:190
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:297
@@ -826,7 +826,7 @@ msgstr "Planet trails"
 
 #: src/gui/StelGui.cpp:194
 msgid "Night vision mode"
-msgstr ""
+msgstr "Night vision mode"
 
 #: src/gui/StelGui.cpp:195
 msgid "Full-screen mode"
@@ -1708,7 +1708,7 @@ msgstr "Transit of Venus"
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
 msgid "Analemma"
-msgstr ""
+msgstr "Analemma"
 
 #: src/translations.h:219
 msgid "Look around each installed landscape."
@@ -1825,12 +1825,16 @@ msgid ""
 "This script shows the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"This script shows the analemma - the path of the Sun across the sky during "
+"the year."
 
 #: src/translations.h:237
 msgid ""
 "Flash of supernova which was observed by Tycho Brahe in 1572 year. For demos "
 "need enable plugin for supernovae."
 msgstr ""
+"Flash of supernova which was observed by Tycho Brahe in 1572 year. For demos "
+"need enable plug-in for supernovae."
 
 #: src/translations.h:240
 msgid "Andorra"
@@ -2837,7 +2841,7 @@ msgstr "Use as default"
 
 #: src/ui_locationDialogGui.h:395
 msgid "Return to default"
-msgstr ""
+msgstr "Return to default"
 
 #: src/ui_locationDialogGui.h:396 plugins/Oculars/src/ui_ocularDialog.h:873
 #: plugins/Oculars/src/ui_ocularDialog.h:882
@@ -6461,7 +6465,7 @@ msgstr "Angle Distance"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:230
 msgid "Discovered year"
-msgstr ""
+msgstr "Discovered year"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
@@ -6504,11 +6508,11 @@ msgstr "Update exoplanets data from Internet"
 
 #: plugins/Observability/src/Observability.cpp:68
 msgid "Observability analysis"
-msgstr ""
+msgstr "Observability analysis"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
-msgstr ""
+msgstr "Ivan Marti-Vidal (Onsala Space Observatory)"
 
 #: plugins/Observability/src/Observability.cpp:71
 msgid ""
@@ -6520,20 +6524,27 @@ msgid ""
 "the quantities shown by this script is given in the 'About' tab of the "
 "configuration window"
 msgstr ""
+"Reports an analysis of source observability (rise, set, and transit times), "
+"as well as the epochs of year when the source is best observed. It assumes "
+"that a source is observable if it is above the horizon during a fraction of "
+"the night. The plug-in also gives the day for largest separation from the "
+"Sun and the days of Acronychal and Cosmical rise/set.<br><br> An explanation "
+"of the quantities shown by this script is given in the 'About' tab of the "
+"configuration window"
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
-msgstr ""
+msgstr "Observability"
 
 #: plugins/Observability/src/Observability.cpp:228
 msgid "Observability configuration window"
-msgstr ""
+msgstr "Observability configuration window"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "h"
-msgstr ""
+msgstr "h"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
@@ -6545,117 +6556,117 @@ msgstr "m"
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: plugins/Observability/src/Observability.cpp:441
 #, qt-format
 msgid "Sets at %1 (in %2)"
-msgstr ""
+msgstr "Sets at %1 (in %2)"
 
 #: plugins/Observability/src/Observability.cpp:442
 #, qt-format
 msgid "Raised at %1 (%2 ago)"
-msgstr ""
+msgstr "Raised at %1 (%2 ago)"
 
 #: plugins/Observability/src/Observability.cpp:452
 #, qt-format
 msgid "Has set at %1 (%2 ago)"
-msgstr ""
+msgstr "Has set at %1 (%2 ago)"
 
 #: plugins/Observability/src/Observability.cpp:453
 #, qt-format
 msgid "Raises at %1 (in %2)"
-msgstr ""
+msgstr "Raises at %1 (in %2)"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
-msgstr ""
+msgstr "Circumpolar."
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "No rise."
-msgstr ""
+msgstr "No rise."
 
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
 msgid "Culminates at %1 (in %2) at %3 deg."
-msgstr ""
+msgstr "Culminates at %1 (in %2) at %3 deg."
 
 #: plugins/Observability/src/Observability.cpp:484
 #, qt-format
 msgid "Culminated at %1 (%2 ago) at %3 deg."
-msgstr ""
+msgstr "Culminated at %1 (%2 ago) at %3 deg."
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr ""
+msgstr "Source is not observable."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr ""
+msgstr "No Acronychal nor Cosmical rise/set."
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Largest Sun separation: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
 msgid " (at %1 deg.)"
-msgstr ""
+msgstr " (at %1 deg.)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
-msgstr ""
+msgstr "Acronychal rise/set"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "No Acronychal rise/set."
-msgstr ""
+msgstr "No Acronychal rise/set."
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
-msgstr ""
+msgstr "Cosmical rise/set"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "No Cosmical rise/set."
-msgstr ""
+msgstr "No Cosmical rise/set."
 
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
 msgid "from %1 to %2"
-msgstr ""
+msgstr "from %1 to %2"
 
 #: plugins/Observability/src/Observability.cpp:604
 msgid " to 31 Dec"
-msgstr ""
+msgstr " to 31 Dec"
 
 #: plugins/Observability/src/Observability.cpp:611
 msgid "Observable during the whole year."
-msgstr ""
+msgstr "Observable during the whole year."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Not observable at dark night."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
-msgstr ""
+msgstr "Best observed"
 
 #: plugins/Observability/src/Observability.cpp:637
 msgid " TODAY:"
-msgstr ""
+msgstr " TODAY:"
 
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
 msgid "Previous Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Previous Full Moon: %1 %2 at %3:%4. "
 
 #: plugins/Observability/src/Observability.cpp:1244
 #, qt-format
 msgid "Next Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Next Full Moon: %1 %2 at %3:%4. "
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
-msgstr ""
+msgstr "Observability Plug-in"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:100
 msgid ""
@@ -6668,14 +6679,22 @@ msgid ""
 "taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
 "for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
+"Plug-in that analyses the observability of the selected source (or the "
+"screen centre, if no source is selected). The plug-in can show rise, "
+"transit, and set times, as well as the best epoch of the year (i.e., largest "
+"angular separation from the Sun), the date range when the source is above "
+"the horizon at dark night, and the dates of Acronychal and Cosmical "
+"rise/set.<br>Ephemeris of the Solar-System objects and parallax effects are "
+"taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
+"for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
-msgstr ""
+msgstr "Explanation of some parameters"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid "Sun altitude at twilight:"
-msgstr ""
+msgstr "Sun altitude at twilight:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid ""
@@ -6684,10 +6703,14 @@ msgid ""
 "and -18 degrees. This parameter is only used for the estimate of the range "
 "of observable epochs (see below)."
 msgstr ""
+"Any celestial object will be considered visible when the Sun is below this "
+"altitude. The altitude at astronomical twilight ranges usually between -12 "
+"and -18 degrees. This parameter is only used for the estimate of the range "
+"of observable epochs (see below)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr ""
+msgstr "Today ephemeris:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6696,10 +6719,14 @@ msgid ""
 "as time spans (referred to the current time) and as clock hours (in local "
 "time)."
 msgstr ""
+"Self-explanatory. The program will show the rise, set, and culmination "
+"(transit) times. The exact times for these ephemeris are given in two ways: "
+"as time spans (referred to the current time) and as clock hours (in local "
+"time)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr ""
+msgstr "Acronychal/Cosmical rise/set:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6713,10 +6740,19 @@ msgid ""
 "that the source is hardly observable (or not observable at all) in the dates "
 "between Cosmical set and rise."
 msgstr ""
+"The Acronychal rise (or set) of an object happens when the object rises (or "
+"sets) just when the Sun sets (or rises), respectively. The exact dates of "
+"these ephemeris depend on the Observer's location. The dates between the "
+"Acronychal set and rise are those when the altitude of the celestial object "
+"uses to be high when the Sun is well below the horizon (hence the object can "
+"be well observed). On the contrary, the Cosmical rise (or set) happens when "
+"both, the object and the Sun, rise (or set) simultaneously. It is obvious "
+"that the source is hardly observable (or not observable at all) in the dates "
+"between Cosmical set and rise."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Largest Sun separation:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6729,10 +6765,18 @@ msgid ""
 "at that declination. Hence, that is the 'best' night to observe a particular "
 "object."
 msgstr ""
+"Happens when the angular separation between the Sun and the celestial object "
+"are maximum. In most cases, this is equivalent to say that the Equatorial "
+"longitudes of the Sun and the object differ by 180 degrees, so the Sun is in "
+"opposition to the object. When an object is at its maximum possible angular "
+"separation from the Sun (no matter if it is a planet or a star), it "
+"culminates roughly at midnight, and on the darkest possible area of the Sky "
+"at that declination. Hence, that is the 'best' night to observe a particular "
+"object."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
-msgstr ""
+msgstr "Best observed from ... to ...:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid ""
@@ -6753,81 +6797,99 @@ msgid ""
 "planets (which will not depend on the mere input of a twilight Sun elevation "
 "by the user) will be implemented in future versions of this plugin."
 msgstr ""
+"The program computes the range of dates when the celestial object is above "
+"the horizon at least during one moment of the night. By 'night', the program "
+"considers the time span when the Sun altitude is below that of the twilight "
+"(which can be set by the user; see above). When the objects are fixed on the "
+"sky (or are exterior planets), the range of observable epochs for the "
+"current year can have two possible forms: either a range from one date to "
+"another (e.g., 20 Jan to 15 Sep) or in two steps (from 1 Jan to a given date "
+"and from another date to 31 Dec). In the first case, the first date (20 Jan "
+"in our example) shall be close to the so-called 'Heliacal rise of a star' "
+"and the second date (15 Sep in our example) shall be close to the 'Heliacal "
+"set'. In the second case (e.g., a range in the form 1 Jan to 20 May and 21 "
+"Sep to 31 Dec), the first date (20 May in our example) would be close to the "
+"Heliacal set and the second one (21 Sep in our example) to the Heliacal "
+"rise. More exact equations to estimate the Heliacal rise/set of stars and "
+"planets (which will not depend on the mere input of a twilight Sun elevation "
+"by the user) will be implemented in future versions of this plug-in."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
-msgstr ""
+msgstr "Full Moon:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 msgstr ""
+"When the Moon is selected, the program can compute the exact closest dates "
+"(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
 msgid "deg."
-msgstr ""
+msgstr "deg."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Observability Configuration"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Observability Plug-in Configuration"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Showing Options"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Today's ephemeris (rise, set, and transit times)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr ""
+msgstr "Dates of Acronychal and Cosmical rise/set"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
-msgstr ""
+msgstr "Date of largest separation to the Sun"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
-msgstr ""
+msgstr "Range of observable epochs"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Dates of previous and next Full Moon"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Font color and size"
-msgstr ""
+msgstr "Font colour and size"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:345
 msgid "Red"
-msgstr ""
+msgstr "Red"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:346
 msgid "Green"
-msgstr ""
+msgstr "Green"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:347
 msgid "Blue"
-msgstr ""
+msgstr "Blue"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:348
 msgid "Font Size"
-msgstr ""
+msgstr "Font Size"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Sun altitude at twilight"
-msgstr ""
+msgstr "Sun altitude at twilight"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "0 deg."
-msgstr ""
+msgstr "0 deg."
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "Equatorial Grid"
